[package]
name = "yellowstone_grpc_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
tokio = "1.45.1"
tonic = "0.13.1"
yellowstone-grpc-client = "6.0.0"
yellowstone-grpc-proto = "6.0.0"
solana-sdk = "2.2.2"
solana-client = "2.2.2"
futures = "0.3.31"
log = "0.4.27"
env_logger = "0.11.8"
chrono = { version = "0.4.41", features = ["clock", "serde"] }
spl-token = "8.0.0"
serde_json = "1.0.140"
solana-transaction-status = "2.2.2"
hex = "0.4.3"
bs58 = "0.5.1"
